
Package: R.devices
==================

Version: 2.6.1 [2013-09-17]
o BUG FIX: Package vignette assumed that R.rsp and R.utils 
  are attached.
o Bumped up package dependencies.


Version: 2.6.0 [2013-08-29]
o Added support for retrieving a Base64-encoded data URI string
  from a DevEvalFile.
o Added classes DevEvalProduct and DevEvalFileProduct, which are
  returned by devEval().
o ROBUSTNESS: Added package system tests.


Version: 2.5.2 [2013-08-27]
o Added devIsInteractive().
o CLEANUP: Package no longer utilizes ':::'.
o BUG FIX: Now devEval() no longer passes a pathname to devEval() for
  interactive devices, which in turn would generate warnings.


Version: 2.5.1 [2013-08-17]
o BUG FIX/ROBUSTNESS: Argument 'ext' of devEval() can now be inferred
  from argument 'type' also when 'type' is passed via a string variable.


Version: 2.5.0 [2013-07-30]
o Added support the 'win.metafile' (WMF) device type and added toWMF()
  creating (extended) WMF files.  Since the file format is *extended*
  WMF, which often has file extension *.emf, toEMF() was also added.
  toEMF() uses the same device driver as toWMF() with the only
  difference that the file extension is *.emf instead of *.wmf.
o Now devOptions() can query the options of multiple device types.
  Added arguments 'options' and 'drop' to devOptions().
o Now devEval() returns a list of class 'DevEvalFile'.
o DOCUMENTATION: Hiding internal/legacy functions from the help index.


Version: 2.4.2 [2013-07-15]
o Added argument 'sep' to devEval() together with an option to set
  its default value.


Version: 2.4.1 [2013-07-12]
o Updated how vignettes are built and included.


Version: 2.4.0 [2013-07-03]
o Now devNew() returns the index of the opened device.
o Now devEval() and devNew(), and hence toPNG() and so on, can be
  called without attaching the package, e.g. R.devices::toPNG().
o CLEANUP: Now package only imports the R.utils.  However, it will
  attach ("load") R.utils as soon as devEval() or devNew() is called.