@@ -3,7 +3,11 @@ Package: R.devices
 ==================
 
 Version: 2.6.1 [2013-09-17]
-o BUG FIX: Package vignette assumed that R.rsp and R.utils 
+o ROBUSTNESS: Now getDataURI() throws an Exception is suggested
+  package 'base64enc' is not installed.
+o BUG FIX: Some package examples and system tests assumed that
+  the suggested package 'base64enc' is installed.
+o BUG FIX: Package vignette assumed that R.rsp and R.utils
   are attached.
 o Bumped up package dependencies.
 
